@@ -1,4 +1,5 @@
 0.17
+ - Add another publication place cleanup use case.
  - Add another edition number cleanup use case.
  - Rewrite Kramerius of MZK to Kramerius of CDL.
 
